--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ h1,h2,h3,h4,h5,h6 {font-family:serif; letter-spacing:5px}
 		<tr align="center">
 			<td><a href ="train.html">HW1.html</a><br>Train</td>
 			<td><a href ="clock.html">HW2.html</a><br>Clock</td>
-			<td><a href ="#">HW3.html</a><br>#</td>
+			<td><a href ="main.html">HW3.html</a><br>#</td>
 			
 		</tr>
 		<tr align="center">
