--- a/main.html
+++ b/main.html
@@ -33,7 +33,7 @@ body {
 <body>
 
 <script type = "module" >
-import {init,animate} from "https://yunhanyuu.github.io/Lab/init.js";
+import {init,animate} from "https://yunhanyuu.github.io/Lab2022/init.js";
 
 init();
 animate();
